# cli

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README  flake.nix
docs/: nix.md
src/: cli.rs  deferred_payment.rs  main.rs  operation_adapter.rs  operation_basket.rs  operation_core.rs  operation_farm.rs  operation_listing.rs  operation_market.rs  operation_order.rs  operation_registry.rs  operation_runtime.rs  operation_validation.rs  output_contract.rs  runtime_args.rs  target_cli.rs
src/cli/: account.rs  basket.rs  config.rs  farm.rs  global.rs  health.rs  input.rs  listing.rs  market.rs  mod.rs  order.rs  relay.rs  signer.rs  store.rs  sync.rs  trade.rs  validation.rs  workspace.rs
src/commands/: doctor.rs  farm.rs  find.rs  identity.rs  job.rs  listing.rs  local.rs  market.rs  mod.rs  myc.rs  net.rs  order.rs  relay.rs  rpc.rs  runtime.rs  sell.rs  signer.rs  sync.rs  workflow.rs
src/domain/: mod.rs  runtime.rs
src/ops/: adapter.rs  context.rs  contract.rs  error.rs  mod.rs  request.rs  result.rs  service.rs  target.rs
src/ops/exec/: basket.rs  core.rs  farm.rs  listing.rs  market.rs  mod.rs  order.rs  runtime.rs  trade.rs  validation.rs
src/registry/: account.rs  basket.rs  config.rs  farm.rs  health.rs  listing.rs  market.rs  mod.rs  order.rs  relay.rs  signer.rs  store.rs  sync.rs  trade.rs  validation.rs  workspace.rs
src/render/: mod.rs
src/runtime/: account.rs  accounts.rs  config.rs  daemon.rs  direct_relay.rs  farm.rs  farm_config.rs  find.rs  hyf.rs  identity.rs  job.rs  listing.rs  local.rs  local_events.rs  logging.rs  management.rs  mod.rs  myc.rs  network.rs  order.rs  paths.rs  provider.rs  sdk.rs  signer.rs  store.rs  sync.rs  validation_receipt.rs  workflow.rs
src/runtime/order/: sdk_status.rs
src/view/: runtime.rs
tests/: doctor.rs  farm.rs  find.rs  help.rs  identity_commands.rs  job_rpc.rs  listing.rs  local.rs  market.rs  myc_status.rs  order.rs  relay_net.rs  runtime_management.rs  runtime_show.rs  sell.rs  signer_runtime_modes.rs  signer_status.rs  sync.rs  target_cli.rs  workflow.rs
tests/support/: mod.rs
